examples/lex_yacc/lang.output
Grammar

    0 $accept: stmts $end

    1 stmts: stmts stmt
    2      | stmt

    3 stmt: "let" IDENT "=" expr ";"
    4     | "if" "(" expr ")" "{" stmts "}" ";"
    5     | expr ";"

    6 expr: expr "+" expr
    7     | expr "-" expr
    8     | expr "*" expr
    9     | expr "/" expr
   10     | expr "&&" expr
   11     | expr "||" expr
   12     | expr "<" expr
   13     | expr ">" expr
   14     | expr "==" expr
   15     | INTLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "if" (258) 4
    "let" (259) 3
    IDENT (260) 3
    INTLIT (261) 15
    "(" (262) 4
    ")" (263) 4
    "{" (264) 4
    "}" (265) 4
    ";" (266) 3 4 5
    "=" (267) 3
    "<" (268) 12
    ">" (269) 13
    "==" (270) 14
    "&&" (271) 10
    "||" (272) 11
    "+" (273) 6
    "-" (274) 7
    "*" (275) 8
    "/" (276) 9


Nonterminals, with rules where they appear

    $accept (22)
        on left: 0
    stmts (23)
        on left: 1 2
        on right: 0 1 4
    stmt (24)
        on left: 3 4 5
        on right: 1 2
    expr (25)
        on left: 6 7 8 9 10 11 12 13 14 15
        on right: 3 4 5 6 7 8 9 10 11 12 13 14


State 0

    0 $accept: • stmts $end
    1 stmts: • stmts stmt
    2      | • stmt
    3 stmt: • "let" IDENT "=" expr ";"
    4     | • "if" "(" expr ")" "{" stmts "}" ";"
    5     | • expr ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    "if"    shift, and go to state 1
    "let"   shift, and go to state 2
    INTLIT  shift, and go to state 3

    stmts  go to state 4
    stmt   go to state 5
    expr   go to state 6


State 1

    4 stmt: "if" • "(" expr ")" "{" stmts "}" ";"

    "("  shift, and go to state 7


State 2

    3 stmt: "let" • IDENT "=" expr ";"

    IDENT  shift, and go to state 8


State 3

   15 expr: INTLIT •

    $default  reduce using rule 15 (expr)


State 4

    0 $accept: stmts • $end
    1 stmts: stmts • stmt
    3 stmt: • "let" IDENT "=" expr ";"
    4     | • "if" "(" expr ")" "{" stmts "}" ";"
    5     | • expr ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    $end    shift, and go to state 9
    "if"    shift, and go to state 1
    "let"   shift, and go to state 2
    INTLIT  shift, and go to state 3

    stmt  go to state 10
    expr  go to state 6


State 5

    2 stmts: stmt •

    $default  reduce using rule 2 (stmts)


State 6

    5 stmt: expr • ";"
    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    ";"   shift, and go to state 11
    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16
    "+"   shift, and go to state 17
    "-"   shift, and go to state 18
    "*"   shift, and go to state 19
    "/"   shift, and go to state 20


State 7

    4 stmt: "if" "(" • expr ")" "{" stmts "}" ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 21


State 8

    3 stmt: "let" IDENT • "=" expr ";"

    "="  shift, and go to state 22


State 9

    0 $accept: stmts $end •

    $default  accept


State 10

    1 stmts: stmts stmt •

    $default  reduce using rule 1 (stmts)


State 11

    5 stmt: expr ";" •

    $default  reduce using rule 5 (stmt)


State 12

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   12     | expr "<" • expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 23


State 13

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   13     | expr ">" • expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 24


State 14

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   14     | expr "==" • expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 25


State 15

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   10     | expr "&&" • expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 26


State 16

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   11     | expr "||" • expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 27


State 17

    6 expr: • expr "+" expr
    6     | expr "+" • expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 28


State 18

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    7     | expr "-" • expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 29


State 19

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    8     | expr "*" • expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 30


State 20

    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
    9     | expr "/" • expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 31


State 21

    4 stmt: "if" "(" expr • ")" "{" stmts "}" ";"
    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    ")"   shift, and go to state 32
    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16
    "+"   shift, and go to state 17
    "-"   shift, and go to state 18
    "*"   shift, and go to state 19
    "/"   shift, and go to state 20


State 22

    3 stmt: "let" IDENT "=" • expr ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    INTLIT  shift, and go to state 3

    expr  go to state 33


State 23

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   12     | expr "<" expr •  [")", ";", "<", ">", "==", "&&", "||", "+", "-", "*", "/"]
   13     | expr • ">" expr
   14     | expr • "==" expr

    $default  reduce using rule 12 (expr)

    Conflict between rule 12 and token "<" resolved as reduce (%left "<").
    Conflict between rule 12 and token ">" resolved as reduce (%left ">").
    Conflict between rule 12 and token "==" resolved as reduce (%left "==").
    Conflict between rule 12 and token "&&" resolved as reduce (%left "&&").
    Conflict between rule 12 and token "||" resolved as reduce (%left "||").
    Conflict between rule 12 and token "+" resolved as reduce ("+" < "<").
    Conflict between rule 12 and token "-" resolved as reduce ("-" < "<").
    Conflict between rule 12 and token "*" resolved as reduce ("*" < "<").
    Conflict between rule 12 and token "/" resolved as reduce ("/" < "<").


State 24

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   13     | expr ">" expr •  [")", ";", "<", ">", "==", "&&", "||", "+", "-", "*", "/"]
   14     | expr • "==" expr

    $default  reduce using rule 13 (expr)

    Conflict between rule 13 and token "<" resolved as reduce (%left "<").
    Conflict between rule 13 and token ">" resolved as reduce (%left ">").
    Conflict between rule 13 and token "==" resolved as reduce (%left "==").
    Conflict between rule 13 and token "&&" resolved as reduce (%left "&&").
    Conflict between rule 13 and token "||" resolved as reduce (%left "||").
    Conflict between rule 13 and token "+" resolved as reduce ("+" < ">").
    Conflict between rule 13 and token "-" resolved as reduce ("-" < ">").
    Conflict between rule 13 and token "*" resolved as reduce ("*" < ">").
    Conflict between rule 13 and token "/" resolved as reduce ("/" < ">").


State 25

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr
   14     | expr "==" expr •  [")", ";", "<", ">", "==", "&&", "||", "+", "-", "*", "/"]

    $default  reduce using rule 14 (expr)

    Conflict between rule 14 and token "<" resolved as reduce (%left "<").
    Conflict between rule 14 and token ">" resolved as reduce (%left ">").
    Conflict between rule 14 and token "==" resolved as reduce (%left "==").
    Conflict between rule 14 and token "&&" resolved as reduce (%left "&&").
    Conflict between rule 14 and token "||" resolved as reduce (%left "||").
    Conflict between rule 14 and token "+" resolved as reduce ("+" < "==").
    Conflict between rule 14 and token "-" resolved as reduce ("-" < "==").
    Conflict between rule 14 and token "*" resolved as reduce ("*" < "==").
    Conflict between rule 14 and token "/" resolved as reduce ("/" < "==").


State 26

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   10     | expr "&&" expr •  [")", ";", "<", ">", "==", "&&", "||", "+", "-", "*", "/"]
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    $default  reduce using rule 10 (expr)

    Conflict between rule 10 and token "<" resolved as reduce (%left "<").
    Conflict between rule 10 and token ">" resolved as reduce (%left ">").
    Conflict between rule 10 and token "==" resolved as reduce (%left "==").
    Conflict between rule 10 and token "&&" resolved as reduce (%left "&&").
    Conflict between rule 10 and token "||" resolved as reduce (%left "||").
    Conflict between rule 10 and token "+" resolved as reduce ("+" < "&&").
    Conflict between rule 10 and token "-" resolved as reduce ("-" < "&&").
    Conflict between rule 10 and token "*" resolved as reduce ("*" < "&&").
    Conflict between rule 10 and token "/" resolved as reduce ("/" < "&&").


State 27

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   11     | expr "||" expr •  [")", ";", "<", ">", "==", "&&", "||", "+", "-", "*", "/"]
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    $default  reduce using rule 11 (expr)

    Conflict between rule 11 and token "<" resolved as reduce (%left "<").
    Conflict between rule 11 and token ">" resolved as reduce (%left ">").
    Conflict between rule 11 and token "==" resolved as reduce (%left "==").
    Conflict between rule 11 and token "&&" resolved as reduce (%left "&&").
    Conflict between rule 11 and token "||" resolved as reduce (%left "||").
    Conflict between rule 11 and token "+" resolved as reduce ("+" < "||").
    Conflict between rule 11 and token "-" resolved as reduce ("-" < "||").
    Conflict between rule 11 and token "*" resolved as reduce ("*" < "||").
    Conflict between rule 11 and token "/" resolved as reduce ("/" < "||").


State 28

    6 expr: expr • "+" expr
    6     | expr "+" expr •  [")", ";", "+", "-"]
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16
    "*"   shift, and go to state 19
    "/"   shift, and go to state 20

    $default  reduce using rule 6 (expr)

    Conflict between rule 6 and token "<" resolved as shift ("+" < "<").
    Conflict between rule 6 and token ">" resolved as shift ("+" < ">").
    Conflict between rule 6 and token "==" resolved as shift ("+" < "==").
    Conflict between rule 6 and token "&&" resolved as shift ("+" < "&&").
    Conflict between rule 6 and token "||" resolved as shift ("+" < "||").
    Conflict between rule 6 and token "+" resolved as reduce (%left "+").
    Conflict between rule 6 and token "-" resolved as reduce (%left "-").
    Conflict between rule 6 and token "*" resolved as shift ("+" < "*").
    Conflict between rule 6 and token "/" resolved as shift ("+" < "/").


State 29

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    7     | expr "-" expr •  [")", ";", "+", "-"]
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16
    "*"   shift, and go to state 19
    "/"   shift, and go to state 20

    $default  reduce using rule 7 (expr)

    Conflict between rule 7 and token "<" resolved as shift ("-" < "<").
    Conflict between rule 7 and token ">" resolved as shift ("-" < ">").
    Conflict between rule 7 and token "==" resolved as shift ("-" < "==").
    Conflict between rule 7 and token "&&" resolved as shift ("-" < "&&").
    Conflict between rule 7 and token "||" resolved as shift ("-" < "||").
    Conflict between rule 7 and token "+" resolved as reduce (%left "+").
    Conflict between rule 7 and token "-" resolved as reduce (%left "-").
    Conflict between rule 7 and token "*" resolved as shift ("-" < "*").
    Conflict between rule 7 and token "/" resolved as shift ("-" < "/").


State 30

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    8     | expr "*" expr •  [")", ";", "+", "-", "*", "/"]
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16

    $default  reduce using rule 8 (expr)

    Conflict between rule 8 and token "<" resolved as shift ("*" < "<").
    Conflict between rule 8 and token ">" resolved as shift ("*" < ">").
    Conflict between rule 8 and token "==" resolved as shift ("*" < "==").
    Conflict between rule 8 and token "&&" resolved as shift ("*" < "&&").
    Conflict between rule 8 and token "||" resolved as shift ("*" < "||").
    Conflict between rule 8 and token "+" resolved as reduce ("+" < "*").
    Conflict between rule 8 and token "-" resolved as reduce ("-" < "*").
    Conflict between rule 8 and token "*" resolved as reduce (%left "*").
    Conflict between rule 8 and token "/" resolved as reduce (%left "/").


State 31

    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
    9     | expr "/" expr •  [")", ";", "+", "-", "*", "/"]
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16

    $default  reduce using rule 9 (expr)

    Conflict between rule 9 and token "<" resolved as shift ("/" < "<").
    Conflict between rule 9 and token ">" resolved as shift ("/" < ">").
    Conflict between rule 9 and token "==" resolved as shift ("/" < "==").
    Conflict between rule 9 and token "&&" resolved as shift ("/" < "&&").
    Conflict between rule 9 and token "||" resolved as shift ("/" < "||").
    Conflict between rule 9 and token "+" resolved as reduce ("+" < "/").
    Conflict between rule 9 and token "-" resolved as reduce ("-" < "/").
    Conflict between rule 9 and token "*" resolved as reduce (%left "*").
    Conflict between rule 9 and token "/" resolved as reduce (%left "/").


State 32

    4 stmt: "if" "(" expr ")" • "{" stmts "}" ";"

    "{"  shift, and go to state 34


State 33

    3 stmt: "let" IDENT "=" expr • ";"
    6 expr: expr • "+" expr
    7     | expr • "-" expr
    8     | expr • "*" expr
    9     | expr • "/" expr
   10     | expr • "&&" expr
   11     | expr • "||" expr
   12     | expr • "<" expr
   13     | expr • ">" expr
   14     | expr • "==" expr

    ";"   shift, and go to state 35
    "<"   shift, and go to state 12
    ">"   shift, and go to state 13
    "=="  shift, and go to state 14
    "&&"  shift, and go to state 15
    "||"  shift, and go to state 16
    "+"   shift, and go to state 17
    "-"   shift, and go to state 18
    "*"   shift, and go to state 19
    "/"   shift, and go to state 20


State 34

    1 stmts: • stmts stmt
    2      | • stmt
    3 stmt: • "let" IDENT "=" expr ";"
    4     | • "if" "(" expr ")" "{" stmts "}" ";"
    4     | "if" "(" expr ")" "{" • stmts "}" ";"
    5     | • expr ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    "if"    shift, and go to state 1
    "let"   shift, and go to state 2
    INTLIT  shift, and go to state 3

    stmts  go to state 36
    stmt   go to state 5
    expr   go to state 6


State 35

    3 stmt: "let" IDENT "=" expr ";" •

    $default  reduce using rule 3 (stmt)


State 36

    1 stmts: stmts • stmt
    3 stmt: • "let" IDENT "=" expr ";"
    4     | • "if" "(" expr ")" "{" stmts "}" ";"
    4     | "if" "(" expr ")" "{" stmts • "}" ";"
    5     | • expr ";"
    6 expr: • expr "+" expr
    7     | • expr "-" expr
    8     | • expr "*" expr
    9     | • expr "/" expr
   10     | • expr "&&" expr
   11     | • expr "||" expr
   12     | • expr "<" expr
   13     | • expr ">" expr
   14     | • expr "==" expr
   15     | • INTLIT

    "if"    shift, and go to state 1
    "let"   shift, and go to state 2
    INTLIT  shift, and go to state 3
    "}"     shift, and go to state 37

    stmt  go to state 10
    expr  go to state 6


State 37

    4 stmt: "if" "(" expr ")" "{" stmts "}" • ";"

    ";"  shift, and go to state 38


State 38

    4 stmt: "if" "(" expr ")" "{" stmts "}" ";" •

    $default  reduce using rule 4 (stmt)
